# tox-pre-commit

./: .codecov.yml  .codespellrc  .coveragerc  .darglint  .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc.toml  .ruff.toml  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  nitpick-style.toml  pyproject.toml  pytest.ini  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  INCIDENT_RESPONSE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  THREAT_MODEL.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/cache-keys/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-tox-job/: action.yml
.github/workflows/: ci-cd.yml
src/tox_plugins/pre_commit/: _plugin.py
tests/: conftest.py  importable_test.py  integration_test.py  smoke_test.py
