[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 77",
  "setuptools-scm >= 8",
]

[project]
name = "tox-pre-commit"
description = "A tox plugin providing a pre-commit environment"
readme = "README.md"
license = "LicenseRef-MIT-NORUS"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  # NOTE: v4.29.0 is the first one to implement the `tox_extend_envs`
  # NOTE: lifecycle hook. But the initial version had a bug fixed in
  # NOTE: the following version 4.30.0.
  #
  # Refs:
  # * https://github.com/tox-dev/tox/issues/3510
  # * https://github.com/tox-dev/tox/pull/3591
  # * https://github.com/tox-dev/tox/pull/3598
  "tox >= 4.30",
]
dynamic = [
  "version",
]

[project.entry-points.tox]
tox-pre-commit = "tox_plugins.pre_commit._plugin"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
